# DRO-Client

./: .clang-format  Attorney_Online_remake.pro  CMakeLists.txt  aoapplication.cpp  aoapplication.h  aoblipplayer.cpp  aoblipplayer.h  aobutton.cpp  aocharbutton.cpp  aocharbutton.h  aocharmovie.cpp  aocharmovie.h  aoconfig.cpp  aoconfig.h  aoconfigpanel.cpp  aoconfigpanel.h  aoemotebutton.cpp  aoevidencebutton.cpp  aoevidencedisplay.cpp  aoimage.cpp  aomovie.cpp  aonotepicker.cpp  aopixmap.cpp  aopixmap.h  aoscene.cpp  aoscene.h  aosfxplayer.cpp  aoshoutplayer.cpp  aotextarea.cpp  aotextedit.h  aotimer.cpp  aotimer.h  charselect.cpp  courtroom.cpp  courtroom.h  courtroom_widgets.cpp  datatypes.h  dro-client.sh  emotes.cpp  evidence.cpp  (+9 more)
.github/workflows/: build-mac.yml  build-ubuntu.yml  build.yml
include/: CMakeLists.txt  courtroom.h
res/: logo_dro.rc
res/ui/: config_panel.ui
src/: CMakeLists.txt  aoconfig.cpp  aoconfigpanel.cpp  aoemotebutton.cpp  aoevidencedisplay.cpp  aomovie.cpp  aonotearea.cpp  aopacket.cpp  charselect.cpp  courtroom.cpp  courtroom_widgets.cpp  debug_functions.cpp  draudioengine_p.cpp  draudiostream.cpp  draudiostreamfamily.cpp  emotes.cpp  evidence.cpp  lobby.cpp  networkmanager.cpp  packet_distribution.cpp  text_file_functions.cpp
